--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Hi! I'm Cortanium, and you should click on me. Right now! >:)" />
         <meta name="author" content="Cortanium" />
         <title>Cortanium</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Cortanium/websitecontent@main/cortanium.min.css" />
     </head>
