--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div id="main" style="display: inline-block; overflow: auto;">
             <img src="https://cdn.jsdelivr.net/gh/Cortanium/websitecontent@main/cortanium.png?raw=true" class="img-fluid" alt="Cortanium" width="500" height="500" />
             <div class="col-lg-6 mx-auto" style="text-align: center;"></div>
-            <a href="https://instagram.com/cortaniumyt" target="_blank" class="btn-social btn-instagram btn-lg" aria-label="Instagram"><i style="position: relative; top: 20%;" class="fa fa-instagram fa-2x"></i></a>
-            <a href="https://discord.gg/wvzNTUn" target="_blank" class="btn-social btn-discord btn-lg" aria-label="Discord"><i style="position: relative; top: 20%;" class="fa fa-discord fa-2x"></i></a>
-            <a href="https://twitch.tv/cortanium" target="_blank" class="btn-social btn-twitch btn-lg" aria-label="Twitch"><i style="position: relative; top: 20%;" class="fa fa-twitch fa-2x"></i></a>
-            <a href="https://twitter.com/cortanium" target="_blank" class="btn-social btn-twitter btn-lg" aria-label="Twitter"><i style="position: relative; top: 20%;" class="fa fa-twitter fa-2x"></i></a>
-            <a href="https://youtube.com/cortanium" target="_blank" class="btn-social btn-youtube btn-lg" aria-label="YouTube"><i style="position: relative; top: 20%;" class="fa fa-youtube fa-2x"></i></a>
+            <a href="https://instagram.com/cortaniumyt" target="_blank" rel="noopener" class="btn-social btn-instagram btn-lg" aria-label="Instagram"><i style="position: relative; top: 20%;" class="fa fa-instagram fa-2x"></i></a>
+            <a href="https://discord.gg/wvzNTUn" target="_blank" rel="noopener" class="btn-social btn-discord btn-lg" aria-label="Discord"><i style="position: relative; top: 20%;" class="fa fa-discord fa-2x"></i></a>
+            <a href="https://twitch.tv/cortanium" target="_blank" rel="noopener" class="btn-social btn-twitch btn-lg" aria-label="Twitch"><i style="position: relative; top: 20%;" class="fa fa-twitch fa-2x"></i></a>
+            <a href="https://twitter.com/cortanium" target="_blank" rel="noopener" class="btn-social btn-twitter btn-lg" aria-label="Twitter"><i style="position: relative; top: 20%;" class="fa fa-twitter fa-2x"></i></a>
+            <a href="https://youtube.com/cortanium" target="_blank" rel="noopener" class="btn-social btn-youtube btn-lg" aria-label="YouTube"><i style="position: relative; top: 20%;" class="fa fa-youtube fa-2x"></i></a>
         </div>
 
         <div id="follow" style="position: absolute; text-align: center; overflow: inherit;"><img src="https://cdn.jsdelivr.net/gh/Cortanium/websitecontent@main/follow.png" alt="Follow Me" /></div>
