--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Cortanium" />
         <title>Cortanium</title>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Cortanium/websitecontent@main/cortanium.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Cortanium/websitecontent@0.0.1/cortanium.min.css" />
     </head>
 
     <body style="background-color: #1de5c2; text-align: center; transform: translateY(15%); overflow: hidden;">
