--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Hi! I'm Cortanium, and you should click on me. Right now! >:)" />
         <meta name="author" content="Cortanium" />
         <title>Cortanium</title>
-        <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/Cortanium/cortanium.github.io/main/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/Cortanium/cortanium.github.io@main/favicon.ico">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Cortanium/websitecontent@0.0.1/cortanium.min.css" />
     </head>
 
